--- a/GI_BNL_logo.ipynb
+++ b/GI_BNL_logo.ipynb
@@ -749,7 +749,7 @@
     "        sum = 0\n",
     "\n",
     "        for bin in range(bin_size):\n",
-    "            sum += img_sum[bin]*img_obj[bin][i,j]\n",
+    "            sum += img_sum*img_obj[bin][i,j]\n",
     "\n",
     "            \n",
     "        ghost[i,j]=term1/bin_size\n",
