GI reconstruction added

--- a/GI_NSLS2_beamline.ipynb
+++ b/GI_NSLS2_beamline.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "0a8cabb7",
    "metadata": {},
    "outputs": [
@@ -10,7 +10,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Thu Aug 26 10:31:45 2021\n"
+      "Wed Sep  1 21:36:05 2021\n"
      ]
     }
    ],
@@ -73,17 +73,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "d61cf10d",
+   "execution_count": 3,
+   "id": "5de6b027",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Load Data\n",
     "\n",
-    "f_x = open(\"data/BNL_logo/x.npz\", \"rb\")\n",
-    "f_y = open(\"data/BNL_logo/y.npz\", \"rb\")\n",
-    "f_toa = open(\"data/BNL_logo/toa.npz\", \"rb\")\n",
-    "f_tot = open(\"data/BNL_logo/tot.npz\", \"rb\")\n",
+    "f_x = open(\"../../data/beamline/x.npz\", \"rb\")\n",
+    "f_y = open(\"../../data/beamline/y.npz\", \"rb\")\n",
+    "f_toa = open(\"../../data/beamline/toa.npz\", \"rb\")\n",
+    "f_tot = open(\"../../data/beamline/tot.npz\", \"rb\")\n",
     "x = np.load(f_x)\n",
     "y = np.load(f_y)\n",
     "toa = np.load(f_toa)\n",
@@ -92,8 +92,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "675f83bf",
+   "execution_count": 4,
+   "id": "8e7395a3",
    "metadata": {},
    "outputs": [
     {
@@ -120,7 +120,7 @@
       "17 176 144 1.0175269421875002 225\n",
       "18 176 144 1.0180900796875 425\n",
       "19 176 144 1.0184307609375 250\n",
-      "29073337 Thu Aug 26 13:57:41 2021\n"
+      "29073337 Wed Sep  1 21:36:56 2021\n"
      ]
     }
    ],
@@ -133,8 +133,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "2dab5a9c",
+   "execution_count": 5,
+   "id": "6ada5614",
    "metadata": {},
    "outputs": [
     {
@@ -155,8 +155,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "3a2a688d",
+   "execution_count": 6,
+   "id": "8f5d3d9e",
    "metadata": {},
    "outputs": [
     {
@@ -221,8 +221,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "ed073971",
+   "execution_count": 7,
+   "id": "0595f7c8",
    "metadata": {},
    "outputs": [
     {
@@ -234,26 +234,26 @@
     }
    ],
    "source": [
-    "xon =[]; yon = []; xoff = []; yoff = []\n",
+    "xon1 =[]; yon1 = []; xoff1 = []; yoff1 = []\n",
     "\n",
     "\n",
-    "tminon = 4.1; tmaxon = 10.0; tminoff = 14.5; tmaxoff = 20.0\n",
+    "tminon1 = 4.1; tmaxon1 = 10.0; tminoff1 = 14.5; tmaxoff1 = 20.0\n",
     "\n",
     "for i in range(len(toa)):\n",
-    "    if (tminon < toa[i] < tmaxon): \n",
-    "        xon.append(x[i])\n",
-    "        yon.append(y[i])\n",
-    "    if (tminoff < toa[i] < tmaxoff): \n",
-    "        xoff.append(x[i])\n",
-    "        yoff.append(y[i])\n",
+    "    if (tminon1 < toa[i] < tmaxon1): \n",
+    "        xon1.append(x[i])\n",
+    "        yon1.append(y[i])\n",
+    "    if (tminoff1 < toa[i] < tmaxoff1): \n",
+    "        xoff1.append(x[i])\n",
+    "        yoff1.append(y[i])\n",
     "        \n",
-    "print(len(xon), len(xoff))"
+    "print(len(xon1), len(xoff1))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
-   "id": "ceb93a36",
+   "execution_count": 8,
+   "id": "aa31cb0a",
    "metadata": {},
    "outputs": [
     {
@@ -272,10 +272,10 @@
    "source": [
     "fig, (ax0, ax1) = plt.subplots(ncols=2,nrows=1, figsize=(10, 4))\n",
     "\n",
-    "h = ax0.hist2d(xon, yon, bins = 256, range = [(0, 256), (0, 256)], norm=mpl.colors.LogNorm())\n",
+    "h = ax0.hist2d(xon1, yon1, bins = 256, range = [(0, 256), (0, 256)], norm=mpl.colors.LogNorm())\n",
     "fig.colorbar(h[3], ax = ax0)\n",
     "\n",
-    "h = ax1.hist2d(xoff, yoff, bins = 256, range = [(0, 256), (0, 256)], norm=mpl.colors.LogNorm())\n",
+    "h = ax1.hist2d(xoff1, yoff1, bins = 256, range = [(0, 256), (0, 256)], norm=mpl.colors.LogNorm())\n",
     "fig.colorbar(h[3], ax = ax1)\n",
     "\n",
     "fig.tight_layout()\n",
@@ -284,70 +284,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "85738a8a",
+   "execution_count": 10,
+   "id": "e5b9c1f9",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "on length: 7120447 , off length:  7397207\n"
+      "on1 length: 7120447 , off1 length:  7397207\n"
      ]
     }
    ],
    "source": [
     "# Making Image data\n",
     "\n",
-    "#tminon = 4.1; tmaxon = 10.0; tminoff = 14.5; tmaxoff = 20.0\n",
+    "#tminon1 = 4.1; tmaxon1 = 10.0; tminoff1 = 14.5; tmaxoff1 = 20.0\n",
     "\n",
-    "x_on = []\n",
-    "y_on = []\n",
-    "toa_on = []\n",
-    "tot_on = []\n",
+    "x_on1 = []\n",
+    "y_on1 = []\n",
+    "toa_on1 = []\n",
+    "tot_on1 = []\n",
     "\n",
-    "x_off = []\n",
-    "y_off = []\n",
-    "toa_off = []\n",
-    "tot_off = []\n",
+    "x_off1 = []\n",
+    "y_off1 = []\n",
+    "toa_off1 = []\n",
+    "tot_off1 = []\n",
     "\n",
     "\n",
     "    \n",
     "    \n",
     "for i in range(len(toa)):\n",
-    "    if toa[i] > tminon and toa[i] < tmaxon:\n",
-    "        x_on.append(x[i])\n",
-    "        y_on.append(y[i])\n",
-    "        toa_on.append(toa[i])\n",
-    "        tot_on.append(tot[i])\n",
+    "    if toa[i] > tminon1 and toa[i] < tmaxon1:\n",
+    "        x_on1.append(x[i])\n",
+    "        y_on1.append(y[i])\n",
+    "        toa_on1.append(toa[i])\n",
+    "        tot_on1.append(tot[i])\n",
     "        \n",
-    "    if toa[i] > tminoff and toa[i] < tmaxoff:\n",
-    "        x_off.append(x[i])\n",
-    "        y_off.append(y[i])\n",
-    "        toa_off.append(toa[i])\n",
-    "        tot_off.append(tot[i])\n",
+    "    if toa[i] > tminoff1 and toa[i] < tmaxoff1:\n",
+    "        x_off1.append(x[i])\n",
+    "        y_off1.append(y[i])\n",
+    "        toa_off1.append(toa[i])\n",
+    "        tot_off1.append(tot[i])\n",
     "\n",
-    "print('on length:', len(y_on), ', off length: ', len(y_off))        \n",
+    "print('on1 length:', len(y_on1), ', off1 length: ', len(y_off1))        \n",
     "        \n",
-    "img_on = np.zeros([256,256])\n",
-    "img_off = np.zeros([256,256])\n",
+    "img_on1 = np.zeros([256,256])\n",
+    "img_off1 = np.zeros([256,256])\n",
     "\n",
     "\n",
-    "for k in range(len(y_on)):\n",
-    "    i = x_on[k]\n",
-    "    j = y_on[k]\n",
-    "    img_on[i][j] = img_on[i][j] + tot_on[k]    \n",
+    "for k in range(len(y_on1)):\n",
+    "    i = x_on1[k]\n",
+    "    j = y_on1[k]\n",
+    "    img_on1[i][j] = img_on1[i][j] + tot_on1[k]    \n",
     "    \n",
-    "for k in range(len(y_off)):\n",
-    "    i = x_off[k]\n",
-    "    j = y_off[k]\n",
-    "    img_off[i][j] = img_off[i][j] + tot_off[k]    \n"
+    "for k in range(len(y_off1)):\n",
+    "    i = x_off1[k]\n",
+    "    j = y_off1[k]\n",
+    "    img_off1[i][j] = img_off1[i][j] + tot_off1[k]    \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "id": "65052135",
+   "execution_count": 11,
+   "id": "7bb20502",
    "metadata": {},
    "outputs": [
     {
@@ -368,10 +368,10 @@
     "\n",
     "fig, (ax0, ax1) = plt.subplots(ncols=2,nrows=1, figsize=(10, 10))\n",
     "\n",
-    "h=ax0.imshow(img_on, norm=mpl.colors.LogNorm())\n",
+    "h=ax0.imshow(img_on1, norm=mpl.colors.LogNorm())\n",
     "#fig.colorbar(_)\n",
     "\n",
-    "h=ax1.imshow(img_off, norm=mpl.colors.LogNorm())\n",
+    "h=ax1.imshow(img_off1, norm=mpl.colors.LogNorm())\n",
     "#fig.colorbar(_)\n",
     "#fig.colorbar(_)\n",
     "\n",
@@ -383,8 +383,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
-   "id": "e41b2232",
+   "execution_count": 19,
+   "id": "3bf91105",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -395,8 +395,8 @@
     "\n",
     "\n",
     "\n",
-    "on_sum = np.sum(img_on)\n",
-    "off_sum = np.sum(img_off)\n",
+    "on1_sum = np.sum(img_on1)\n",
+    "off1_sum = np.sum(img_off1)\n",
     "\n",
     "\n",
     "\n",
@@ -406,8 +406,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
-   "id": "5e5f0bf9",
+   "execution_count": 20,
+   "id": "e0d613a4",
    "metadata": {},
    "outputs": [
     {
@@ -424,25 +424,25 @@
     }
    ],
    "source": [
-    "ghost1 = np.zeros([img_size_x,img_size_y])\n",
-    "ghost2 = np.zeros([img_size_x,img_size_y])\n",
+    "ghost11 = np.zeros([img_size_x,img_size_y])\n",
+    "ghost12 = np.zeros([img_size_x,img_size_y])\n",
     "\n",
     "for i in range(ghost1.shape[0]):\n",
     "    for j in range(ghost1.shape[1]):\n",
     "\n",
-    "        ghost1[i,j] = on_sum*img_off[i,j]\n",
-    "        ghost2[i,j] = off_sum*img_on[i,j]\n",
+    "        ghost11[i,j] = on1_sum*img_off1[i,j]\n",
+    "        ghost12[i,j] = off1_sum*img_on1[i,j]\n",
     "\n",
     "        \n",
     "        \n",
     "fig, ax = plt.subplots(ncols=2,nrows=1, figsize=(10, 10))\n",
     "\n",
     "#h=ax[0].imshow(ghost1, norm=mpl.colors.LogNorm())\n",
-    "h=ax[0].imshow(ghost1)\n",
+    "h=ax[0].imshow(ghost11)\n",
     "#fig.colorbar(_)\n",
     "\n",
     "#h=ax[1].imshow(ghost2, norm=mpl.colors.LogNorm())\n",
-    "h=ax[1].imshow(ghost2)\n",
+    "h=ax[1].imshow(ghost12)\n",
     "#fig.colorbar(_)\n",
     "#fig.colorbar(_)\n",
     "\n",
@@ -455,7 +455,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ac1eae6d",
+   "id": "21dbed5b",
    "metadata": {},
    "outputs": [],
    "source": []
